# feedbacker

./: .gitignore  LICENSE  README.md  pyproject.toml
src/feedbacker/: __init__.py  api.py  cli.py  config.py  database.py  frontend.py  main.py  models.py
src/feedbacker/assignments/: models.py  schemas.py  service.py  views.py
src/feedbacker/assignments/templates/: assignment.html
src/feedbacker/auth/: models.py  roles.py  schemas.py  service.py  views.py
src/feedbacker/courses/: models.py  schemas.py  service.py
src/feedbacker/static/: index.html
src/feedbacker/templates/: base.html  home.html
